2006-05-11  Neal H. Walfield  <neal@gnu.org>

	* month_view.c (gtk_month_view_reload_events): Let mktime
	compensate for DST.

2006-05-11  Neal H. Walfield  <neal@gnu.org>

	* main.c: Don't include <sys/types.h>, <stdio.h> or <unistd.h>.
	* day_view.c: Don't include <sys/types.h>, <stdio.h>, <stdlib.h>,
	<gpe/stylus.h>, "gtkdatesel.h", "event-cal.h" or "event-list.h".
	* week_view.c: Don't include <sys/types.h>, <gpe/stylus.h>,
	"gtkdatesel.h", "event-cal.h" or "event-list.h".
	* month_view.c: Don't include <sys/types.h>, "event-ui.h" or
	"gtkdatesel.h".
	(is_today): Don't define.

2006-05-11  Neal H. Walfield  <neal@gnu.org>
	Reported by Koen Kooi  <koen@dominion.kabel.utwente.nl>

	* day_render.c (gtk_day_render_expose): Display the lines
	separating the hours when the Bain's line is not present.

2006-05-11  Neal H. Walfield  <neal@gnu.org>

	* event-cal.c (update_cal): Freeze and thaw CAL for old versions
	of Gtk+.

2006-05-11  Neal H. Walfield  <neal@gnu.org>

	* main.c (main): If the import filename is a relative filename,
	create an absolute file name.

2006-05-11  Neal H. Walfield  <neal@gnu.org>

	* day_render.c (calc_events_positions): Free ROOT.

2006-05-11  Neal H. Walfield  <neal@gnu.org>

	* import-vcal.c (do_import_vevent): Ignore the allday property.

2006-05-10  Neal H. Walfield  <neal@gnu.org>

	* import-vcal.c (extract_time): Fix timezone calculation logic.

2006-05-10  Neal H. Walfield  <neal@gnu.org>

	* main.c (main): Start with 7/8's of the screen's width and
	height, not half.  If LANDSCAPE is FALSE, make PRIMARY a
	GtkVPaned.  Conditionalize the calendar and event box on TINY, not
	on LANDSCAPE.  If LANDSCAPE is FALSE, make SIDEBAR a a GtkHPaned.

2006-05-10  Neal H. Walfield  <neal@gnu.org>

	* import-vcal.c (do_import_vevent): Get and set the recurrence
	increment (i.e. iCal's interval).
	
2006-05-10  Neal H. Walfield  <neal@gnu.org>

	* import-vcal.c (extract_time): Take into account that